Project Commit Last Commit

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 CLOUD_NAME=dalo5zpik
 CLOUD_API_KEY=533195258464477
 CLOUD_API_SECRET=ZVLzKf3zxeJfY9l5oHV86_r0a6M
+
+ATLASDB_URL=mongodb+srv://devrajj_bagul:Raj%403127@cluster0.2y5tikn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+SECRET=mysupersecretcode
